[gd_scene load_steps=4 format=3 uid="uid://5ity5n7jy3b8"]

[ext_resource type="Script" path="res://ui/gameplay_ui_layer.gd" id="1_2vged"]
[ext_resource type="PackedScene" uid="uid://bp627of2jpvl8" path="res://ui/character_selection_screen.tscn" id="2_rk245"]
[ext_resource type="PackedScene" uid="uid://cqmsmsumhossr" path="res://ui/hud.tscn" id="5_uol5s"]

[node name="GameplayUILayer" type="CanvasLayer" node_paths=PackedStringArray("character_selection_screen", "hud", "screens")]
process_mode = 3
visible = false
script = ExtResource("1_2vged")
character_selection_screen = NodePath("Screens/CharacterSelectionScreen")
hud = NodePath("Overlay/HUD")
screens = NodePath("Screens")

[node name="Screens" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSelectionScreen" parent="Screens" instance=ExtResource("2_rk245")]
visible = false
layout_mode = 1

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" parent="Overlay" instance=ExtResource("5_uol5s")]
layout_mode = 1
mouse_filter = 2

[connection signal="selection_ready" from="Screens/CharacterSelectionScreen" to="." method="_on_character_selection_screen_selection_ready"]
[connection signal="readiness_updated" from="Overlay/HUD" to="." method="_on_readiness_updated"]
